# msx_emulator

./: Cargo.toml  Makefile  NEXT.md  history.txt
client/: index.html  package.json  vite.config.js
client/src/: App.jsx  Store.js  Utils.js  index.css
client/src/components/: Hexdump.jsx  Memory.jsx  Navbar.jsx  Program.jsx
client/src/layout/: Memory.jsx  Navbar.jsx  Program.jsx  Registers.jsx  Vram.jsx
fixtures/vdp/: main.asm  main.lst
fixtures/z80/jumps_and_bit_manipulation/: main.asm
fixtures/z80/simple/: main.asm
fixtures/z80/stack/: main.asm
fixtures/z80/test_call/: Makefile  main.asm
fixtures/zexall/: Makefile  main.lst
public/: index.html  index.js  style.css
public/js/api/: index.mjs
public/js/components/: App.mjs  Memory.mjs  Navbar.mjs  Opcode.mjs  Registers.mjs
src/: console.rs  internal_state.rs  main.rs  msx.rs  open_msx.rs  renderer.rs  utils.rs
src/components/: bus.rs  cpu.rs  devices.rs  display.rs  input.rs  instruction.rs  memory.rs  mod.rs  ppi.rs  sound.rs  vdp.rs
