[package]
edition = "2021"
name = "msx_emulator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bitflags = "2.0.2"
clap = {version = "4.1.13", features = ["derive", "env"]}
glob = "0.3.1"
hexdump = "0.1.1"
rustyline = "11.0.0"
sdl2 = "0.35.2"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
walkdir = "2.3.3"
xml-rs = "0.8"
